# cove-controls

./: .gitignore  Cove Matcha Kiosk - standalone.html  README.md  locations.txt
config/pi/: cyclonedds_network.xml  simple_assembly_cyclonedds_pi.xml
config/ubuntu/: cyclonedds.xml  cyclonedds_pi.xml  simple_assembly_cyclonedds_ubuntu.xml
docs/: cove_kiosk_agent_handoff.md  cove_kiosk_operator_quickstart.md  cove_kiosk_ros_integration.md
scripts/: build_workspace.sh  install_rosdeps.sh  update_kiosk_bundle.py
scripts/common/: record_waypoints.py  run_eef_path.py  run_recorded_path.py  run_stored_states.py
scripts/pi/: apriltag_test.sh  camera_test.sh  dual_launch.sh  plan_to_tag_pi.sh  plan_to_tag_pi_execute.sh  plan_to_tag_pi_execute_position_only.sh  plan_to_tag_pi_position_only.sh  robot_launch.sh  run_cove_kiosk.sh  show_robot.sh  simple_assembly_pi.sh  tracking_autotune.sh  tracking_pi.sh  waypoint_approve.sh  waypoint_runner_pi.sh
scripts/pi/canhat/: README.md  disable_motor.sh  enable_motor.sh  one_motor_driver.sh  plan_to_tag.sh  plan_to_tag_execute.sh  raw_enable_disable_all_ids.sh  raw_scan_ids.sh  record_waypoints.sh  record_waypoints_readonly.sh  run_eef_path.sh  run_recorded_path.sh  run_stored_states.sh  simple_assembly_moveit.sh  spin_motor.sh  tracking_moveit.sh  zero_straight_position.sh
scripts/pi/full/: continuous_path_pi.sh  pickup_sequence_pi.sh  plan_to_tag_pi.sh  plan_to_tag_pi_execute.sh  plan_to_tag_pi_execute_position_only.sh  plan_to_tag_pi_position_only.sh  tracking_autotune.sh  tracking_pi.sh  tracking_pi_no_zero.sh  waypoint_approve.sh  waypoint_runner_pi.sh
scripts/pi/simple/: simple_assembly_pi.sh
scripts/pi/turret/: dual_launch.sh  robot_launch.sh  show_robot.sh
scripts/pi/util/: camera_test.sh  magnet_test.sh
scripts/ubuntu/: apriltag_rviz.sh  camera_view.sh  list_topics.sh  plan_to_tag_rviz.sh  run_cove_kiosk.sh  rviz_launch.sh  show_eef_pose.sh  show_robot.sh  simple_assembly_rviz.sh  tracking_rviz.sh  watch_detections.sh
scripts/ubuntu/canhat/: README.md  auto_connect_moveit_warehouse.py  one_motor_rviz.sh  plan_to_tag_rviz.sh  record_waypoints.sh  run_stored_states.sh  simple_assembly_moveit_rviz.sh  tracking_moveit_rviz.sh  warehouse_db_common.sh  watch_joint.sh
scripts/ubuntu/full/: plan_to_tag_rviz.sh  show_full.rviz  show_full.sh  tracking_rviz.sh
scripts/ubuntu/simple/: apriltag_rviz.sh  simple_assembly_rviz.sh
scripts/ubuntu/turret/: rviz_launch.sh  show_robot.sh
scripts/ubuntu/util/: camera_view.sh  fix_ssh.sh  list_topics.sh  show_eef_pose.sh  watch_detections.sh  waypoints.txt
src/canhat_one_motor/: CMakeLists.txt  package.xml
src/canhat_one_motor/config/: one_motor.rviz
src/cove_kiosk_bridge/: package.xml  setup.cfg  setup.py
src/cove_kiosk_bridge/cove_kiosk_bridge/: __init__.py  kiosk_bridge_node.py  motion_controller.py
src/cove_kiosk_bridge/launch/: cove_kiosk.launch.py
src/cove_kiosk_bridge/resource/: cove_kiosk_bridge
src/cove_kiosk_bridge/scripts/: dummy_matcha_motion.py
src/cove_kiosk_bridge/web/: index.html
src/cove_rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
src/cove_rviz_plugins/include/cove_rviz_plugins/: plan_to_tag_panel.hpp
src/cove_rviz_plugins/src/: plan_to_tag_panel.cpp
src/cove_vision/: CMakeLists.txt  package.xml
src/cove_vision/config/: apriltag_36h11.yaml  apriltag_robot.rviz  apriltag_test.rviz  camera_info_640x480.yaml  usb_cam.params.yaml
src/cove_vision/launch/: apriltag_rviz.launch.py  apriltag_test.launch.py  camera_test.launch.py  camera_view.launch.py
src/cove_vision/nodes/: robot_description_topic.py  tag_tf_marker.py
src/damiao_driver/: CMakeLists.txt  damiao_hardware_interface.xml  package.xml
src/damiao_driver/config/: controllers.yaml
src/damiao_driver/include/damiao_driver/: SerialPort.h  damiao_hardware_interface.hpp
src/damiao_driver/launch/: damiao_launch.py
src/damiao_driver/src/: damiao_hardware_interface.cpp  damiao_node.cpp
src/damiao_socketcan_driver/: CMakeLists.txt  README.md  damiao_socketcan_hardware_interface.xml  package.xml
src/damiao_socketcan_driver/include/damiao_socketcan_driver/: damiao_socketcan.hpp  damiao_socketcan_hardware_interface.hpp
src/damiao_socketcan_driver/launch/: damiao_socketcan_launch.py
src/damiao_socketcan_driver/src/: damiao_socketcan.cpp  damiao_socketcan_hardware_interface.cpp  damiao_socketcan_node.cpp
src/full_assembly/: CMakeLists.txt  package.xml
src/full_assembly/meshes/: Part_1.stl  (+7 more)
src/moveitturrettest/: .setup_assistant  CMakeLists.txt  package.xml
src/simple_assembly/: CMakeLists.txt  package.xml
src/simple_assembly_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/simple_assembly_tracking/: CMakeLists.txt  package.xml
src/simple_assembly_tracking/config/: robot.rviz
src/simple_assembly_tracking/launch/: continuous_path.launch.py  pickup_sequence.launch.py  plan_to_tag.launch.py  plan_to_tag_canhat.launch.py  waypoint_runner.launch.py
src/simple_assembly_tracking/nodes/: autotune_sweep.py  continuous_path.py  pickup_sequence.py  plan_to_tag.py  tag_tracker.py  waypoint_runner.py
src/simple_assembly_tracking/urdf/: simple_assembly_tracking.urdf.xacro
src/simple_assembly_tracking_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/simple_assembly_tracking_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  plan_to_tag.rviz  ros2_controllers.yaml  simple_assembly_tracking.ros2_control.xacro  simple_assembly_tracking.srdf  simple_assembly_tracking.urdf.xacro  simple_assembly_tracking_canhat.ros2_control.xacro  simple_assembly_tracking_canhat.urdf.xacro
src/simple_assembly_tracking_moveit_config/launch/: move_group.launch.py  move_group_canhat.launch.py  moveit_rviz.launch.py  moveit_rviz_canhat.launch.py  robot.launch.py  robot_canhat.launch.py  rsp.launch.py  rsp_canhat.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/simple_turret/: CMakeLists.txt  package.xml
src/simple_turret_moveit/: CMakeLists.txt  package.xml
(+73 files in other folders)
