<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cove_rviz_plugins</name>
  <version>0.1.0</version>
  <description>RViz panels for COVE robot workflows.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>std_msgs</depend>

  <build_depend>qtbase5-dev</build_depend>
  <exec_depend>qtbase5-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz_common plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
