<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cove_vision</name>
  <version>0.0.1</version>
  <description>Standalone webcam and AprilTag launch files for COVE.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
