<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_assembly_tracking_moveit_config</name>
  <version>0.1.0</version>
  <description>MoveIt config for simple_assembly with AprilTag tracking</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>cove_vision</exec_depend>
  <exec_depend>cove_rviz_plugins</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>simple_assembly</exec_depend>
  <exec_depend>simple_assembly_tracking</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
